--- a/activities/exercise-pymarc-basics.ipynb
+++ b/activities/exercise-pymarc-basics.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "Many cultural heritage institutions hold inventory and bibliographic records in the *Machine Readable Cataloging* format, or [MaRC](https://en.wikipedia.org/wiki/MARC_standards). In this notebook, we will explore some basic uses of Python code to parse MaRC records, count and filter them, and then to transform them.\n",
     "\n",
-    "The examples assume installation and use of the ``pymarc`` python library, which is available on github at https://github.com/edsu/pymarc.\n",
+    "The examples assume installation and use of the ``pymarc`` python library, which is available on github at https://github.com/edsu/pymarc. This library was developed by Gabriel Farrell, Mark Matienzo, Geoffrey Spear, Ed Summers. \n",
     "\n",
     "The activities below use a file of MaRC records retrieved from the Project MUSE database representing all book titles received during the month of February 2018, as of February 28, 2018 (see [Project MUSE's Download MaRC Records](https://muse.jhu.edu/about/librarians/marc_records.html) for information). When this data was uploaded to this exercise, it included 706 records.\n"
    ]
