--- a/activities/exercise-pymarc-basics.ipynb
+++ b/activities/exercise-pymarc-basics.ipynb
@@ -172,7 +172,7 @@
     }
    },
    "source": [
-    "One way to fix this would be to use a try/except loop to establish the first variable. In other words, we will try the code, but if the ``titlePrev`` variable is not establish, the code runs the except loop to establish it: "
+    "One way to fix this would be to use a try/except loop to establish the first variable. In other words, we will try the code, but if the ``titlePrev`` variable is not established, the code runs the except loop to establish it: "
    ]
   },
   {
