--- a/activities/exercise-pymarc-basics.ipynb
+++ b/activities/exercise-pymarc-basics.ipynb
@@ -73,7 +73,7 @@
    "source": [
     "from pymarc import MARCReader\n",
     "\n",
-    "with open('/marc-python-tests/Project_MUSE_2018_Complete_20180228.mrc', 'rb') as fh:\n",
+    "with open('/marc-python-tests/Project_MUSE_2018_Complete_20180228.mrc', 'rb') as fh: #NB: this open command must point to the location of the marc file in your system\n",
     "  reader = MARCReader(fh)\n",
     "  Titlecount = 0\n",
     "  for record in reader:\n",
