--- a/activities/exercise-pymarc-basics.ipynb
+++ b/activities/exercise-pymarc-basics.ipynb
@@ -252,7 +252,8 @@
     "### Resources\n",
     "\n",
     "* [PyMarc](https://github.com/edsu/pymarc)\n",
-    "* [Project MUSE MaRC Records](https://muse.jhu.edu/about/librarians/marc_records.html)"
+    "* [Project MUSE MaRC Records](https://muse.jhu.edu/about/librarians/marc_records.html)",
+    "* [Library of Congress MaRC Records](https://www.loc.gov/cds/products/marcDist.php)"
    ]
   }
  ],
