meme analysis completed activity

--- a/activities/activity-meme-analysis.ipynb
+++ b/activities/activity-meme-analysis.ipynb
@@ -67,7 +67,7 @@
     "## use the contextual with open() method to open the file and read it\n",
     "## note that the file is a 'utf-16' encoding\n",
     "## to reuse this example you may need to change the filepath\n",
-    "with open(r'C:\\Users\\jesjohn\\memegenerator-dataset\\memegenerator-dataset\\memegenerator.csv', 'r', encoding='utf-16') as memedata:\n",
+    "with open('memegenerator.csv', 'r', encoding='utf-16') as memedata:\n",
     "    reader = csv.DictReader(memedata)\n",
     "    print('Output fieldnames:',reader.fieldnames)\n",
     "    for heading in reader.fieldnames:\n",
@@ -106,7 +106,7 @@
    ],
    "source": [
     "column = 0\n",
-    "with open(r'C:\\Users\\jesjohn\\memegenerator-dataset\\memegenerator-dataset\\memegenerator.csv', 'r', encoding='utf-16') as memedata:\n",
+    "with open('memegenerator.csv', 'r', encoding='utf-16') as memedata:\n",
     "    reader = csv.DictReader(memedata, delimiter='\\t')\n",
     "    for header in reader.fieldnames:\n",
     "        column = column + 1\n",
@@ -148,7 +148,7 @@
    "source": [
     "memeCount = 0\n",
     "## reopen the file, with the contextual opener as above:\n",
-    "with open(r'C:\\Users\\jesjohn\\memegenerator-dataset\\memegenerator-dataset\\memegenerator.csv', 'r', encoding='utf-16') as memedata:\n",
+    "with open('memegenerator.csv', 'r', encoding='utf-16') as memedata:\n",
     "    reader = csv.DictReader(memedata, delimiter='\\t')\n",
     "    for row in reader: \n",
     "        memeCount = memeCount + 1\n",
@@ -180,7 +180,7 @@
    "source": [
     "memeCount = 0\n",
     "## reopen the file, with the contextual opener as above:\n",
-    "with open(r'C:\\Users\\jesjohn\\memegenerator-dataset\\memegenerator-dataset\\memegenerator.csv', 'r', encoding='utf-16') as memedata:\n",
+    "with open('memegenerator.csv', 'r', encoding='utf-16') as memedata:\n",
     "    reader = csv.DictReader(memedata, delimiter='\\t')\n",
     "    for row in reader: \n",
     "        memeCount = memeCount + 1\n",
@@ -258,7 +258,7 @@
     "types = list()\n",
     "counts = dict()\n",
     "\n",
-    "with open(r'C:\\Users\\jesjohn\\memegenerator-dataset\\memegenerator-dataset\\memegenerator.csv', 'r', encoding='utf-16') as memedata:\n",
+    "with open('memegenerator.csv', 'r', encoding='utf-16') as memedata:\n",
     "    reader = csv.DictReader(memedata, delimiter='\\t')\n",
     "    print('Here\\'s the types and IDs from each row scanned')\n",
     "    for row in reader: \n",
@@ -319,7 +319,7 @@
     "memeCount = 0\n",
     "typesDict = dict()\n",
     "\n",
-    "with open(r'C:\\Users\\jesjohn\\memegenerator-dataset\\memegenerator-dataset\\memegenerator.csv', 'r', encoding='utf-16') as memedata:\n",
+    "with open('memegenerator.csv', 'r', encoding='utf-16') as memedata:\n",
     "    reader = csv.DictReader(memedata, delimiter='\\t')\n",
     "    for row in reader: \n",
     "        memeCount = memeCount + 1\n",
@@ -427,7 +427,7 @@
     "wordCountsTest = dict()\n",
     "numWordsTest = dict() \n",
     "\n",
-    "with open(r'C:\\Users\\jesjohn\\memegenerator-dataset\\memegenerator-dataset\\memegenerator.csv', 'r', encoding='utf-16') as memedata:\n",
+    "with open('memegenerator.csv', 'r', encoding='utf-16') as memedata:\n",
     "    reader = csv.DictReader(memedata, delimiter='\\t')\n",
     "    for row in reader: \n",
     "        rowCount = rowCount + 1\n",
@@ -500,7 +500,7 @@
     "wordCounts = dict()\n",
     "numWords = dict() \n",
     "\n",
-    "with open(r'C:\\Users\\jesjohn\\memegenerator-dataset\\memegenerator-dataset\\memegenerator.csv', 'r', encoding='utf-16') as memedata:\n",
+    "with open('memegenerator.csv', 'r', encoding='utf-16') as memedata:\n",
     "    reader = csv.DictReader(memedata, delimiter='\\t')\n",
     "    for row in reader: \n",
     "        rowCount = rowCount + 1\n",
@@ -892,7 +892,7 @@
     "\n",
     "rowCounter = 0\n",
     "qCounter = 0\n",
-    "with open(r'C:\\Users\\jesjohn\\memegenerator-dataset\\memegenerator-dataset\\memegenerator.csv', 'r', encoding='utf-16') as memedata:\n",
+    "with open('memegenerator.csv', 'r', encoding='utf-16') as memedata:\n",
     "    reader = csv.DictReader(memedata, delimiter='\\t')\n",
     "    for row in reader: \n",
     "        rowCounter = rowCounter + 1\n",
