add Python 103 update from Windows machine

--- a/activities/Python 103 - Conditionals, Libraries, Files.ipynb
+++ b/activities/Python 103 - Conditionals, Libraries, Files.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Python 103 - Conditionals, libraries, input(), and files \n",
+    "# Python 103 - Libraries, conditionals, input(), and files \n",
     "\n",
     "This notebook goes through additional foundations for working in Python. \n",
     "We already covered basics of the language, the concepts of functions, \n",
@@ -20,6 +20,52 @@
     "  * [Lists](https://www.py4e.com/html3/08-lists)\n",
     "  * [Files](https://www.py4e.com/html3/07-files)\n",
     "* etc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Extending Python: Libraries\n",
+    "\n",
+    "In Python, you can easily import \"libraries,\" which are groups of additional code\n",
+    "that allow you to extend the functionality. For example, if you want to make \n",
+    "a program that will query information from a webpage, you need to be able to explain\n",
+    "to Python how to interact with the hypertext protocol and ask for responses\n",
+    "as a web browser would. For this case, you can \"import\" a library called `requests`. Additional \n",
+    "libraries allow you to interact with information in the file system, as you \n",
+    "would in the shell or command line, or to use specific types of data files, such as .csv. \n",
+    "We will also make use of `csv` to process information in CSV files, `json` to use JSON, \n",
+    "and `lxml` and/or `ETree` to process XML. \n",
+    "\n",
+    "The syntax to import a library is `import`. There are different flavors of importing a library \n",
+    "as shown here:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "\n",
+    "from lxml import etree\n",
+    "\n",
+    "import string as s\n",
+    "import xml.etree.ElementTree as ET"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Line 1: Basic import, in this case for the requests module.\n",
+    "\n",
+    "Line 3: This imports a specific part (`etree`) of a larger module (`lxml`). Basic construction: from X import Y\n",
+    "\n",
+    "Lines 5 & 6: Provide an alias for a module, which can make it easier to refer to refer to a module with a\n",
+    "long name. Basic construction: import LONG_NAME.LONGER.NAAAAAAME as y"
    ]
   },
   {
@@ -263,9 +309,7 @@
    "source": [
     "## input()\n",
     "\n",
-    "Let's say that you want to ask the user for input. We can see if the input is a palindrome. \n",
-    "We will build on the previous functions, `reverse()` and `palindrome()`.\n",
-    "\n",
+    "Let's say that you want to ask the user for input. \n",
     "The basic syntax for asking for input is `input()`. This can be assigned to a variable and then reused. "
    ]
   },
@@ -293,6 +337,14 @@
     "    print('You entered y!')\n",
     "else:\n",
     "    print('Please enter an x or y!')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can reuse our functions from above and see if the input is a palindrome. \n",
+    "We will build on the previous functions, `reverse()` and `palindrome()`."
    ]
   },
   {
@@ -362,52 +414,6 @@
     "    return palindrome(phrase)\n",
     "\n",
     "ask_for_palindrome()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Extending Python: Libraries\n",
-    "\n",
-    "In Python, you can easily import \"libraries,\" which are groups of additional code\n",
-    "that allow you to extend the functionality. For example, if you want to make \n",
-    "a program that will query information from a webpage, you need to be able to explain\n",
-    "to Python how to interact with the hypertext protocol and ask for responses\n",
-    "as a web browser would. For this case, you can \"import\" a library called `requests`. Additional \n",
-    "libraries allow you to interact with information in the file system, as you \n",
-    "would in the shell or command line, or to use specific types of data files, such as .csv. \n",
-    "We will also make use of `csv` to process information in CSV files, `json` to use JSON, \n",
-    "and `lxml` and/or `ETree` to process XML. \n",
-    "\n",
-    "The syntax to import a library is `import`. There are different flavors of importing a library \n",
-    "as shown here:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import requests\n",
-    "\n",
-    "from lxml import etree\n",
-    "\n",
-    "import string as s\n",
-    "import xml.etree.ElementTree as ET"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Line 1: Basic import, in this case for the requests module.\n",
-    "\n",
-    "Line 3: This imports a specific part (`etree`) of a larger module (`lxml`). Basic construction: from X import Y\n",
-    "\n",
-    "Lines 5 & 6: Provide an alias for a module, which can make it easier to refer to refer to a module with a\n",
-    "long name. Basic construction: import LONG_NAME.LONGER.NAAAAAAME as y"
    ]
   },
   {
@@ -506,6 +512,42 @@
     "    for line in f:\n",
     "        count += 1\n",
     "    print('Line count:', count)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can read the contents of the file using the basic `open()` and `read()`, like this:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please enter the path to the file: ../assets/mbox-short.txt\n",
+      "94626\n"
+     ]
+    }
+   ],
+   "source": [
+    "fhand = input('Please enter the path to the file: ')\n",
+    "\n",
+    "file_text = open(fhand).read()\n",
+    "\n",
+    "print(len(file_text))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We could use another file to look for basic aspects of text, match strings, etc. "
    ]
   },
   {
@@ -685,7 +727,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
