update Python 104 notebook

--- a/activities/Python 104 - Writing Files, Inventorying Files.ipynb
+++ b/activities/Python 104 - Writing Files, Inventorying Files.ipynb
@@ -31,6 +31,44 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Basic use of open() and write()\n",
+    "\n",
+    "line = 'Believe that life is worth living, and your belief will help create the fact.'\n",
+    "# Credit William James https://en.wikiquote.org/wiki/William_James\n",
+    "\n",
+    "fout = open('quote-output.txt', 'w')\n",
+    "\n",
+    "fout.write(line)\n",
+    "\n",
+    "fout.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Believe that life is worth living, and your belief will help create the fact.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# use the with open() syntax to check if the file is there\n",
+    "\n",
+    "with open('quote-output.txt', 'r') as f:\n",
+    "    print(f.read())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -43,6 +81,22 @@
     "* `shutil` allows to access some shell utilities, like move, copy, rename, delete. See https://docs.python.org/3/library/shutil.html?highlight=shutils.\n",
     "\n",
     "We will also use the `csv` module since it will help us to write the information that we gather to a structured data file that can later be opened in Excel or other spreadsheet applications. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create the csv\n",
+    "import csv\n",
+    "\n",
+    "headers = [\n",
+    "    'path',\n",
+    "    'filename',\n",
+    "    ''\n",
+    "]"
    ]
   },
   {
