add Python 104 notebook revisions

--- a/activities/Python 104 - Writing Files, Inventorying Files.ipynb
+++ b/activities/Python 104 - Writing Files, Inventorying Files.ipynb
@@ -72,6 +72,69 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We can also extract information from a file then reuse that in another file. \n",
+    "For example, we could extract the email addresses from `mbox-short.txt` and create\n",
+    "an address book file:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['stephen.marquard@uct.ac.za\\n', 'louis@media.berkeley.edu\\n', 'zqian@umich.edu\\n', 'rjlowe@iupui.edu\\n', 'cwen@iupui.edu\\n', 'gsilver@umich.edu\\n', 'wagnermr@iupui.edu\\n', 'antranig@caret.cam.ac.uk\\n', 'gopal.ramasammycook@gmail.com\\n', 'david.horwitz@uct.ac.za\\n', 'ray@media.berkeley.edu\\n'] \n",
+      "\n",
+      "\n",
+      "stephen.marquard@uct.ac.za\n",
+      "louis@media.berkeley.edu\n",
+      "zqian@umich.edu\n",
+      "rjlowe@iupui.edu\n",
+      "cwen@iupui.edu\n",
+      "gsilver@umich.edu\n",
+      "wagnermr@iupui.edu\n",
+      "antranig@caret.cam.ac.uk\n",
+      "gopal.ramasammycook@gmail.com\n",
+      "david.horwitz@uct.ac.za\n",
+      "ray@media.berkeley.edu\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create a path to the file\n",
+    "file = '../assets/mbox-short.txt'\n",
+    "\n",
+    "# set up a file name for a file to create\n",
+    "fout = 'email-list.txt'\n",
+    "\n",
+    "#establish a list to record emails as they are identified\n",
+    "emails = []\n",
+    "\n",
+    "# open the source file to extract emails\n",
+    "with open(file, 'r') as f:\n",
+    "    for line in f:\n",
+    "        if line.startswith('From:'):\n",
+    "            email = line[6:]\n",
+    "            if email not in emails:\n",
+    "                emails.append(email)\n",
+    "print(emails, '\\n\\n')\n",
+    "\n",
+    "# open another file in write mode to write the emails.\n",
+    "with open(fout, 'w') as f:\n",
+    "    for email in emails:\n",
+    "        f.write(email)\n",
+    "\n",
+    "print(open(fout).read())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Inventorying Files\n",
     "\n",
     "For this activity, we are going to use a few modules that allow us to interact with the file system. These should be somewhat familiar after we have already looked into basic shell commands.\n",
@@ -85,18 +148,128 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from os.path import join, getsize\n",
+    "import csv\n",
+    "\n",
+    "# set up the csv\n",
+    "headers = [\n",
+    "    'path',\n",
+    "    'filename',\n",
+    "    'file_extension',\n",
+    "    'size'\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once we know what we want in the csv, how do we get that information? We can use the `os` module to get file information. We will use the `os.walk` function to \"walk\" over the file tree, identify folder lists, paths, and filenames.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "../assets/Bundle-web-files-small\n"
+     ]
+    }
+   ],
+   "source": [
+    "walk_this_directory = os.path.join('..','assets','Bundle-web-files-small')\n",
+    "\n",
+    "print(walk_this_directory)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "../assets/Bundle-web-files-small\n",
+      "['audio', 'image', 'pdf', 'presentation', 'video']\n",
+      "['04-04-21full.asf', 'glmp_cig.EQ.wm.p20.t12z', 'oct17cc.asx', 'vlwhcssc.asx']\n",
+      "../assets/Bundle-web-files-small/audio\n",
+      "[]\n",
+      "['04-04-21full.asf', 'glmp_cig.EQ.wm.p20.t12z', 'oct17cc.asx', 'vlwhcssc.asx']\n",
+      "../assets/Bundle-web-files-small/image\n",
+      "[]\n",
+      "['04-04-21full.asf', 'glmp_cig.EQ.wm.p20.t12z', 'oct17cc.asx', 'vlwhcssc.asx']\n",
+      "../assets/Bundle-web-files-small/pdf\n",
+      "[]\n",
+      "['04-04-21full.asf', 'glmp_cig.EQ.wm.p20.t12z', 'oct17cc.asx', 'vlwhcssc.asx']\n",
+      "../assets/Bundle-web-files-small/presentation\n",
+      "[]\n",
+      "['04-04-21full.asf', 'glmp_cig.EQ.wm.p20.t12z', 'oct17cc.asx', 'vlwhcssc.asx']\n",
+      "../assets/Bundle-web-files-small/video\n",
+      "[]\n",
+      "['04-04-21full.asf', 'glmp_cig.EQ.wm.p20.t12z', 'oct17cc.asx', 'vlwhcssc.asx']\n"
+     ]
+    }
+   ],
+   "source": [
+    "for FolderPaths, SubfolderNames, filenames in os.walk(walk_this_directory):\n",
+    "    print(FolderPaths)\n",
+    "    print(SubfolderNames)\n",
+    "    print(files)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "../assets/Bundle-web-files-small consumes 9069 bytes in 1 non-directory files\n",
+      "../assets/Bundle-web-files-small/audio consumes 25856261 bytes in 4 non-directory files\n",
+      "../assets/Bundle-web-files-small/image consumes 497284 bytes in 5 non-directory files\n",
+      "../assets/Bundle-web-files-small/pdf consumes 149427 bytes in 5 non-directory files\n",
+      "../assets/Bundle-web-files-small/presentation consumes 289792 bytes in 3 non-directory files\n",
+      "../assets/Bundle-web-files-small/video consumes 115706 bytes in 4 non-directory files\n"
+     ]
+    }
+   ],
+   "source": [
+    "# get information about how many files are in each directory and how much space they take up\n",
+    "for FolderPaths, SubfolderNames, filenames in os.walk(walk_this_directory):\n",
+    "    print(FolderPaths, \"consumes\", end=\" \")\n",
+    "    print(sum(getsize(join(FolderPaths, name)) for name in filenames), end=\" \")\n",
+    "    print(\"bytes in\", len(filenames), \"non-directory files\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create the csv\n",
-    "import csv\n",
-    "\n",
-    "headers = [\n",
-    "    'path',\n",
-    "    'filename',\n",
-    "    ''\n",
-    "]"
+    "# get filepaths and names and sizes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# write to CSV with above-noted headers"
    ]
   },
   {
@@ -127,7 +300,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
