add Python 104 notebook revisions

--- a/activities/Python 104 - Writing Files, Inventorying Files.ipynb
+++ b/activities/Python 104 - Writing Files, Inventorying Files.ipynb
@@ -256,6 +256,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'os' has no attribute 'fwalk'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-12-f8d7468d4354>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# try using os.fwalk()\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mroot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdirs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfiles\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrootfd\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfwalk\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwalk_this_directory\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mroot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"consumes\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     print(sum([os.stat(name, dir_fd=rootfd).st_size for name in files]),\n\u001b[1;32m      5\u001b[0m           end=\"\")\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'os' has no attribute 'fwalk'"
+     ]
+    }
+   ],
+   "source": [
+    "# try using os.fwalk()\n",
+    "for root, dirs, files, rootfd in os.fwalk(walk_this_directory):\n",
+    "    print(root, \"consumes\", end=\"\")\n",
+    "    print(sum([os.stat(name, dir_fd=rootfd).st_size for name in files]),\n",
+    "          end=\"\")\n",
+    "    print(\"bytes in\", len(files), \"non-directory files\")\n",
+    "    if 'CVS' in dirs:\n",
+    "        dirs.remove('CVS')  # don't visit CVS directories"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
