update Python 104 to include 105 directions

--- a/activities/Python 104 - Writing Files, Inventorying Files.ipynb
+++ b/activities/Python 104 - Writing Files, Inventorying Files.ipynb
@@ -534,6 +534,13 @@
     "1. Write a script that can walk through a series of directories nad identify files based on their file extension. For example, perhaps you want to count the number of .pdf files or .jpg. Create file that can look for this information and then tally the files. Then, have the program output the list of filenames and filepaths in a CSV file. Call this file `extension_detector.py`. \n",
     "1. Write a script that creates a `master` and `derivative` directory within a subdirectory that has the file's name as its name. For example, if there are two files, one named `001.jpg` and `audition.wav`, there should be a directory named `001` and another named `audition`. Within these, there should be master and derivative folders. The original files should be in the `master` folder. Call this file `master_and_derivatives.py`."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next week, dictionaries (streamline CSV creation), and additional derived information: mimetype and fixity/hash."
+   ]
   }
  ],
  "metadata": {
